@@ -7,8 +7,10 @@ import com.collabit.chat.repository.ChatMessageRepository;
 import com.collabit.chat.repository.ChatRoomRepository;
 import com.collabit.global.common.PageResponseDTO;
 import com.collabit.user.domain.entity.User;
+import com.collabit.user.exception.UserNotFoundException;
 import com.collabit.user.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
@@ -16,28 +18,27 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
+@Slf4j
 public class ChatRoomListService {
 
     private final ChatRoomRepository chatRoomRepository;
     private final ChatMessageRepository chatMessageRepository;
+    private final ChatRedisService chatRedisService;
     private final UserRepository userRepository;
 
     // 닉네임으로 사용자 찾기
     private User getUserByNickname(String nickname) {
-//        return userRepository.findByNickname(nickname)
-//                .orElseThrow(() -> new UserNotFoundException());
-        return new User();
+        return userRepository.findByNickname(nickname)
+                .orElseThrow(UserNotFoundException::new);
     }
 
     // 닉네임으로 채팅방 조회
-    public ChatRoomResponseDTO getChatRoomByNickname(String userCode, String nickname) {
-        User user = getUserByNickname(nickname);
+    public ChatRoomResponseDTO getChatRoomByNickname(String userCode, ChatRoomRequestDTO requestDTO) {
+        User user = getUserByNickname(requestDTO.getNickname());
         String userCode2 = user.getCode();
-
         String uniqueCode = ChatRoom.generateChatRoomCode(userCode, userCode2);
         Optional<ChatRoom> chatRoom = chatRoomRepository.findByUniqueCode(uniqueCode);
         int roomCode = chatRoom.map(ChatRoom::getCode).orElse(-1);
@@ -56,7 +57,6 @@ public class ChatRoomListService {
 
         // 채팅방 고유 코드 생성
         String uniqueCode = ChatRoom.generateChatRoomCode(userCode, userCode2);
-
         // 채팅방 중복 확인 또는 새 채팅방 생성
         ChatRoom chatRoom = chatRoomRepository.findByUniqueCode(uniqueCode)
                 .orElseGet(() -> createNewChatRoom(userCode, userCode2, uniqueCode));
@@ -66,8 +66,8 @@ public class ChatRoomListService {
 
     // 새 채팅방 생성
     private ChatRoom createNewChatRoom(String userCode1, String userCode2, String uniqueCode) {
-        User user1 = userRepository.findById(userCode1).orElseThrow();
-        User user2 = userRepository.findById(userCode2).orElseThrow();
+        User user1 = userRepository.findById(userCode1).orElseThrow(UserNotFoundException::new);
+        User user2 = userRepository.findById(userCode2).orElseThrow(UserNotFoundException::new);
 
         return chatRoomRepository.save(
                 ChatRoom.builder()
@@ -85,38 +85,20 @@ public class ChatRoomListService {
                 .build();
     }
 
-    //채팅방 리스트 조회
+    // 채팅방 리스트 조회
     public PageResponseDTO getChatRoomList(String userCode, ChatRoomListRequestDTO requestDTO) {
         int size = 15;
-        int page = requestDTO.getPageNumber();
-        Pageable pageable = PageRequest.of(page, size);
+        Pageable pageable = PageRequest.of(requestDTO.getPageNumber(), size);
         User user = userRepository.findById(userCode).orElseThrow();
+
         Page<ChatRoom> chatRoomPage = chatRoomRepository.findByUser1OrUser2(user, user, pageable);
-
-        // 채팅방 리스트 응답 DTO 변환
         List<ChatRoomListResponseDTO> chatRoomList = chatRoomPage.getContent().stream()
-                .map(chatRoom -> {
-                    // 마지막 메시지 및 마지막 메시지 시간 조회
-                    ChatMessage lastMessage = chatMessageRepository.findTopByRoomCodeOrderByTimestampDesc(chatRoom.getCode());
-                    int unreadCount = getUnreadMessageCountForRoom(chatRoom.getCode());
-                    // 상대 유저 조회
-                    User otherUser = chatRoom.getUser1().getCode().equals(userCode) ? chatRoom.getUser2() : chatRoom.getUser1();
-                    // 채팅방 리스트 DTO 생성
-                    return ChatRoomListResponseDTO.builder()
-                            .roomCode(chatRoom.getCode())
-                            .lastMessage(lastMessage.getMessage())
-                            .lastMessageTime(lastMessage.getTimestamp())
-                            .unreadMessageCount(unreadCount)
-                            .nickname(otherUser.getNickname())
-                            .profileImage(otherUser.getProfileImage())
-                            .build();
-                })
-                .collect(Collectors.toList());
+                .map(chatRoom -> buildChatRoomListResponse(chatRoom, userCode))
+                .toList();
 
-        // PageResponseDTO 생성 및 반환
         return PageResponseDTO.builder()
                 .content(chatRoomList)
-                .pageNumber(page)
+                .pageNumber(requestDTO.getPageNumber())
                 .pageSize(size)
                 .totalElements((int) chatRoomPage.getTotalElements())
                 .totalPages(chatRoomPage.getTotalPages())
@@ -125,15 +107,32 @@ public class ChatRoomListService {
                 .build();
     }
 
-    // 모든 채팅방에서 읽지 않은 메시지 개수 반환
-    public ChatUnreadResponseDTO getUnreadMessagesForUser(String userCode) {
-        return ChatUnreadResponseDTO.builder()
-                .isExist(chatMessageRepository.countByUserCodeAndIsReadFalse(userCode) != 0)
+    // Redis와 연동하여 채팅방 리스트 응답 DTO 생성
+    private ChatRoomListResponseDTO buildChatRoomListResponse(ChatRoom chatRoom, String userCode) {
+        ChatMessage lastMessage = chatMessageRepository.findTopByRoomCodeOrderByTimestampDesc(chatRoom.getCode());
+        int unreadCount = chatRedisService.getUnreadMessagesCount(chatRoom.getCode(), userCode);
+        User otherUser = getOtherUser(chatRoom, userCode);
+
+        return ChatRoomListResponseDTO.builder()
+                .roomCode(chatRoom.getCode())
+                .lastMessage(lastMessage != null ? lastMessage.getMessage() : null)
+                .lastMessageTime(lastMessage != null ? lastMessage.getTimestamp() : null)
+                .unreadMessageCount(unreadCount)
+                .nickname(otherUser.getNickname())
+                .profileImage(otherUser.getProfileImage())
                 .build();
     }
 
-    // 특정 채팅방에서 읽지 않은 메시지 개수 반환
-    public int getUnreadMessageCountForRoom(int roomCode) {
-        return chatMessageRepository.countByRoomCodeAndIsReadFalse(roomCode);
+    // Redis와 연계하여 읽지 않은 메시지 확인
+    public ChatUnreadResponseDTO getUnreadMessagesCount(String userCode) {
+        return ChatUnreadResponseDTO.builder()
+                .isExist(chatRedisService.getUnreadMessagesForUser(userCode) > 0)
+                .build();
     }
+
+    // 상대 유저 정보 가져오기
+    private User getOtherUser(ChatRoom chatRoom, String userCode) {
+        return chatRoom.getUser1().getCode().equals(userCode) ? chatRoom.getUser2() : chatRoom.getUser1();
+    }
+
 }
